--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = "/"
-title = "BabelFish Documentation"
+title = "Infinite Improbability Drive - Blog"
 theme = "hugo-geekdoc"
 
 # Required to get well formatted code blocks
