--- a/hugo.toml
+++ b/hugo.toml
@@ -128,20 +128,20 @@ enableRobotsTXT = true
 
 [languages]
 
-[languages.es]
-  weight = 1
-  languageName = "Español"
-  title = "Project 42 - Blog"
-  contentDir = "content/posts/es"
-
 [languages.en]
-  weight = 2
+  weight = 1
   languageName = "English"
   title = "Project 42 - Blog"
-  contentDir = "content/posts/en"
+  contentDir = "content/en"
+
+[languages.es]
+  weight = 2
+  languageName = "Español"
+  title = "Project 42 - Blog"
+  contentDir = "content/es"
 
 [languages.ja]
   weight = 3
   languageName = "日本語"
   title = "Project 42 - Blog"
-  contentDir = "content/posts/ja"
+  contentDir = "content/ja"
