--- a/hugo.toml
+++ b/hugo.toml
@@ -1,147 +1,190 @@
+## Base URL for the site
 baseURL = "/"
+## Site title
 title = "Project 42 - Blog"
+## Use hugo-brewm theme
 theme = "hugo-brewm"
-defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = true
-
-# Required to get well formatted code blocks
-pygmentsUseClasses = true
-pygmentsCodeFences = true
-disablePathToLower = true
+## Enable Git information for pages, (e.g. lastMod date information)
 enableGitInfo = true
-
-# Required if you want to render robots.txt template
+## Convert all URLs to absolute URLs
+canonifyURLs = true
+## Default language for content
+defaultContentLanguage = "en"
+## Put default language in subdirectory
+defaultContentLanguageInSubdir = true
+## Generate a robots.txt
 enableRobotsTXT = true
+## Files to ignore when building site
+ignoreFiles = [ '\.redacted', '\.old','\.bak', '\.tmp', '\.swp', '\.DS_Store']
 
+## Markup configuration
 [markup]
-  [markup.goldmark.renderer]
-    # Needed for mermaid shortcode or when nesting shortcodes (e.g. img within
-    # columns or tabs)
-    unsafe = true
-  [markup.tableOfContents]
-    startLevel = 1
-    endLevel = 9
+    ## Table of contents settings
+    [markup.tableOfContents]
+        ## Minimum heading level to include
+        startLevel = 2
+        ## Maximum heading level to include
+        endLevel = 3
+        ## Use ordered list for TOC
+        ordered = false
 
+    ## Code highlighting settings
+    [markup.highlight]
+        ## Enable code fence highlighting
+        codeFences = true
+        ## Starting line number
+        lineNoStart = 1
+        ## Show line numbers
+        lineNos = false
+        ## Put line numbers in table
+        lineNumbersInTable = true
+        ## Use classes for styling (required for hugo-brewm)
+        noClasses = false
+        ## Width of tab character
+        tabWidth = 4
+
+    ## Goldmark markdown processor settings
+    [markup.goldmark]
+        [markup.goldmark.renderer]
+            ## Allow HTML in markdown
+            unsafe = true
+
+## Sitemap configuration
+[sitemap]
+    ## Change frequency setting (will affect posts listings layout): 'always', 'hourly', 'daily', 'weekly', 'monthly', 'yearly', 'never'
+    changeFreq = 'monthly'
+
+## Taxonomy register
 [taxonomies]
-  tag = "tags"
+    category = 'categories'
+    tag = 'tags'
+    author = 'author'
 
+## Site parameters
 [params]
-  # (Optional, default none) Set a subtitle used in the page header.
-  # geekdocSubtitle = "A Hugo theme for documentation"
+    ## Site title
+    title = "Project 42 - Blog"
+    ## Site description
+    description = "Blog oficial de Infinite Improbability Drive donde compartimos actualizaciones, comunicados y el progreso de nuestros proyectos."
+    ## Copyright notice on colophon
+    copyright = "Copyright 2025 © Infinite Improbability Drive"
+    ## Hide "powered by hugo" on colophon
+    HideHugoCredit = true
+    ## Enable extended metadata (social cards)
+    extMeta = true
+    ## Enable coffee metric
+    coffeeStat = true
+    ## Do not block AI user agent for robot.txt
+    AllowAIRobots = false
+    ## or BearMode--Minimize clutter for small site; Disable breadcrumbs menu, share button, related posts, colophon and redaction history.
+    ZenMode = false
+    ## Disable black background on main-footer
+    DisableFootBar = false
+    ## Merge site license, footer menu and coffee stat
+    unifiedFooter = true
 
-  # (Optional, default 6) Set how many table of contents levels to be showed on page.
-  # Use false to hide ToC, note that 0 will default to 6 (https://gohugo.io/functions/default/)
-  # You can also specify this parameter per page in front matter.
-  geekdocToC = 3
+    ## Author information
+    [params.author]
+        ## site author's name
+        name = 'Infinite Improbability Drive'
+        ## Author's email (will be used for RSS feed)
+        email = 'contact@infinitedrive.xyz'
 
-  # (Optional, default static/brand.svg) Set the path to a logo for the Geekdoc
-  # relative to your 'static/' folder.
-  # geekdocLogo = "logo.png"
+    ## Comments configuration
+    [params.comments]
+        ## Disable comments (disable fediverse comments)
+        disabled = false
 
-  # (Optional, default false) Render menu from data file in 'data/menu/main.yaml'.
-  # See also https://geekdocs.de/usage/menus/#bundle-menu.
-  geekdocMenuBundle = true
+    ## Feed display settings
+    [params.feed]
+        ## Enable flowlines
+        flowlines = true
+        ## Limit number of flowlines with maximum 42
+        flowlinesLimit = 21
 
-  # (Optional, default false) Collapse all menu entries, can not be overwritten
-  # per page if enabled. Can be enabled per page via 'geekdocCollapseSection'.
-  geekdocCollapseAllSections = true
+    ## Home page display settings
+    [params.home]
+        ## Disable slide carousel
+        disableSlide = false
+        ## Disable taxonomy listing carousel
+        disableListing = false
+        ## Select taxonomy listing to be featured
+        featuredListing = ['categories', 'tags']
 
-  # (Optional, default true) Show page navigation links at the bottom of each docs page.
-  geekdocNextPrev = false
+    ## Post display settings
+    [params.posts]
+        ## Enable text justification
+        justifying = false
+        ## Disable paragraph indentation
+        noIndent = false
+        ## Use sans-serif fonts as default
+        sfdefault = false
+        ## Show colophon section (including QR code)
+        colophon = true
+        ## disable redaction history
+        disableHistory = false
+        ## Show related content
+        related = true
+        ## Show share buttons
+        share = true
 
-  # (Optional, default true) Show a breadcrumb navigation bar at the top of each docs page.
-  # You can also specify this parameter per page in front matter.
-  geekdocBreadcrumb = true
+    ## Search configuration
+    [params.search]
+        ## Enable search functionality, please index your site first
+        enable = true
+        ## Use pagefind search when javascript enabled, currently only 'pagefind' is supported
+        pagefind = true
 
-  # (Optional, default none) Set source repository location. Used for 'Edit page' links.
-  # You can also specify this parameter per page in front matter.
-  geekdocRepo = ""
+    ## Typography settings
+    [params.typeface]
+        ## Use web safe fonts (will override font selection below)
+        webSafe = false
+        ## Serif font selection: 'Cormorant' 'EB Garamond' and 'crimson' (default)
+        roman = 'crimson'
+        ## Sans-serif font selection: 'Inter' 'Montserrat' 'Rosario' and 'Lexica Ultralegible' (default)
+        sans = 'inter'
+        ## Host fonts on local host instead of GitHub
+        localHost = true
+        ## Reduce icon subset for base-ui to only 38 icon (save up to 15KB)
+        minimalUI = true
 
-  # (Optional, default none) Enable 'Edit page' links. Requires 'geekdocRepo' param
-  # and the path must point to the parent directory of the 'content' folder.
-  # You can also specify this parameter per page in front matter.
-  geekdocEditPath = "/tree/main/"
+    ## Extended Metadata and Social card configuration
+    [params.socialCard]
+        ## Enable twitter and opengraph social cards (same as .Params.extMeta)
+        enable = true
 
-  # (Optional, default false) Show last modification date of the page in the header.
-  # Keep in mind that last modification date works best if `enableGitInfo` is set to true.
-  geekdocPageLastmod = false
+## Menu configuration
+[[menu.main]]
+    name = "Home"
+    identifier = "home"
+    pageRef = "/"
+    weight = 10
+    pre = "home"
 
-  # (Optional, default true) Enables search function with flexsearch.
-  # Index is built on the fly and might slow down your website.
-  geekdocSearch = true
+[[menu.main]]
+    name = "Blog"
+    identifier = "blog"
+    pageRef = "/posts/"
+    weight = 20
+    pre = "book"
 
-  # (Optional, default false) Display search results with the parent folder as prefix. This
-  # option allows you to distinguish between files with the same name in different folders.
-  # NOTE: This parameter only applies when 'geekdocSearch = true'.
-  geekdocSearchShowParent = true
-
-  # (Optional, default none) Add a link to your Legal Notice page to the site footer.
-  # It can be either a remote url or a local file path relative to your content directory.
-  # geekdocLegalNotice = "https://blog.example.com/legal"
-
-  # (Optional, default none) Add a link to your Privacy Policy page to the site footer.
-  # It can be either a remote url or a local file path relative to your content directory.
-  # geekdocPrivacyPolicy = "/privacy"
-
-  # (Optional, default true) Add an anchor link to headlines.
-  geekdocAnchor = true
-
-  # (Optional, default true) Copy anchor url to clipboard on click.
-  geekdocAnchorCopy = true
-
-  # (Optional, default true) Enable or disable image lazy loading for images rendered
-  # by the 'img' shortcode.
-  geekdocImageLazyLoading = true
-
-  # (Optional, default false) Set HTMl <base> to .Site.Home.Permalink if enabled. It might be required
-  # if a subdirectory is used within Hugos BaseURL.
-  # See https://developer.mozilla.org/de/docs/Web/HTML/Element/base.
-  geekdocOverwriteHTMLBase = false
-
-  # (Optional, default true) Enable or disable the JavaScript based color theme toggle switch. The CSS based
-  # user preference mode still works.
-  geekdocDarkModeToggle = false
-
-  # (Optional, default false) Auto-decrease brightness of images and add a slightly grayscale to avoid
-  # bright spots while using the dark mode.
-  geekdocDarkModeDim = false
-
-  # (Optional, default false) Enforce code blocks to always use the dark color theme.
-  geekdocDarkModeCode = true
-
-  # (Optional, default true) Display a "Back to top" link in the site footer.
-  geekdocBackToTop = true
-
-  # (Optional, default false) Enable or disable adding tags for post pages automatically to the navigation sidebar.
-  geekdocTagsToMenu = true
-
-  # (Optional, default 'title') Configure how to sort file-tree menu entries. Possible options are 'title', 'linktitle',
-  # 'date', 'publishdate', 'expirydate' or 'lastmod'. Every option can be used with a reverse modifier as well
-  # e.g. 'title_reverse'.
-  geekdocFileTreeSortBy = "title"
-
-  # (Optional, default none) Adds a "Content licensed under <license>" line to the footer.
-  # Could be used if you want to define a default license for your content.
-  #[params.geekdocContentLicense]
-  #  name = "CC BY-SA 4.0"
-  #  link = "https://creativecommons.org/licenses/by-sa/4.0/"
-
+## Language configuration
 [languages]
 
 [languages.en]
-  weight = 1
-  languageName = "English"
-  title = "Project 42 - Blog"
-  contentDir = "content/en"
+    weight = 1
+    languageName = "English"
+    title = "Project 42 - Blog"
+    contentDir = "content/en"
 
 [languages.es]
-  weight = 2
-  languageName = "Español"
-  title = "Project 42 - Blog"
-  contentDir = "content/es"
+    weight = 2
+    languageName = "Español"
+    title = "Project 42 - Blog"
+    contentDir = "content/es"
 
 [languages.ja]
-  weight = 3
-  languageName = "日本語"
-  title = "Project 42 - Blog"
-  contentDir = "content/ja"
+    weight = 3
+    languageName = "日本語"
+    title = "Project 42 - Blog"
+    contentDir = "content/ja"
