Agregar funcionalidad de incrustación de contenido externo y guía de decoración
- Crear shortcodes iframe y embed para incrustar contenido web externo
- Agregar página de contenido externo a pantalla completa con layout personalizado
- Crear guía completa de decoración del tema Hugo Breu
- Crear post tutorial sobre incrustación de contenido externo
- Agregar entrada de menú para página de contenido externo
- Corregir template de menú para resolver PageRef correctamente
- Eliminar archivo YAML de menú no utilizado

--- a/hugo.toml
+++ b/hugo.toml
@@ -293,6 +293,13 @@ ignoreFiles = [ '\.redacted', '\.old','\.bak', '\.tmp', '\.swp', '\.DS_Store']
     weight = 20
     pre = "book"
 
+[[menu.main]]
+    name = "Contenido Externo"
+    identifier = "contenido-externo"
+    pageRef = "contenido-externo"
+    weight = 30
+    pre = "link"
+
 ## Additional menu items (uncomment and configure as needed)
 # [[menu.main]]
 #     name = "Categories"
